extracted values to config

--- a/config.env
+++ b/config.env
@@ -1,10 +1,13 @@
 RELEASE_NAME=
-REPO=
-REPO_BRANCH=
+KERNEL_REPO=
+KERNEL_BRANCH=
+KERNEL_SUBMODULES=
+ZIPPER_REPO=
+ZIPPER_BRANCH=
 ARCH=
 COMPILER=
 DEFCONFIG=
 IMAGE_FILE_NAME=
-NEED_DTBO_FILE=
-NEED_DTB_FILE=
+NEED_DTBO=
+NEED_DTB=
 REMOVE_KSU=
