--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,38 +1,41 @@
-name: Build Meteoric-UNOFFICIAL
+name: Kernel Builder Workflow
 
 on:
   workflow_dispatch:
 
 jobs:
   build:
-    name: Build Meteoric kernel
+    name: Build Kernel
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Script and Config
+    - name: Checkout Script and Fetch Config
       uses: actions/checkout@v3
       with:
         path: script
 
-    - name: Setup Configuration
+    - name: Setup Configurations
       run: |
         echo "RELEASE_NAME=$(cat script/config.env | grep "RELEASE_NAME" | head -n 1 | cut -d "=" -f 2 | tr -d '\r' )" >> $GITHUB_ENV
-        echo "REPO=$(cat script/config.env | grep "REPO" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
-        echo "REPO_BRANCH=$(cat script/config.env | grep "REPO_BRANCH" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
+        echo "KERNEL_REPO=$(cat script/config.env | grep "KERNEL_REPO" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
+        echo "KERNEL_BRANCH=$(cat script/config.env | grep "KERNEL_BRANCH" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
+        echo "KERNEL_SUBMODULES=$(cat script/config.env | grep "KERNEL_SUBMODULES" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
+        echo "ZIPPER_REPO=$(cat script/config.env | grep "ZIPPER_REPO" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
+        echo "ZIPPER_BRANCH=$(cat script/config.env | grep "ZIPPER_BRANCH" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
         echo "ARCH=$(cat script/config.env | grep "ARCH" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
         echo "COMPILER=$(cat script/config.env | grep "COMPILER" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
         echo "DEFCONFIG=$(cat script/config.env | grep "DEFCONFIG" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
-        echo "IMAGE=$(cat script/config.env | grep "IMAGE_FILE_NAME" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
-        echo "DTBO=$(cat script/config.env | grep "NEED_DTBO_FILE" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
-        echo "DTB=$(cat script/config.env | grep "NEED_DTB_FILE" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
+        echo "IMAGE_FILE_NAME=$(cat script/config.env | grep "IMAGE_FILE_NAME" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
+        echo "NEED_DTBO=$(cat script/config.env | grep "NEED_DTBO" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
+        echo "NEED_DTB=$(cat script/config.env | grep "NEED_DTB" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
         echo "REMOVE_KSU=$(cat script/config.env | grep "REMOVE_KSU" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
 
     - name: Checkout Kernel Source
       uses: actions/checkout@v3
       with:
-        repository: ${{ env.REPO }}
-        ref: ${{ env.REPO_BRANCH }}
+        repository: ${{ env.KERNEL_REPO }}
+        ref: ${{ env.KERNEL_BRANCH }}
         path: ${{ env.RELEASE_NAME }}
-        submodules: false
+        submodules: ${{ env.KERNEL_SUBMODULES }}
 
     - name: "Set Last Commit variables"
       id: vars
@@ -43,8 +46,8 @@ jobs:
     - name: Checkout Zipper
       uses: actions/checkout@v3
       with:
-        repository: sen-tenz/AnyKernel3
-        ref: meteoric
+        repository: ${{ env.ZIPPER_REPO }}
+        ref: ${{ env.ZIPPER_BRANCH }}
         path: zipper
 
     - name: Pre-build Message to Telegram
@@ -57,9 +60,9 @@ jobs:
         message: |
           ${{ env.RELEASE_NAME }} build started.
           
-          Building on commit <a href="https://github.com/${{ env.REPO }}/commit/${{ steps.vars.outputs.long_sha }}">${{ steps.vars.outputs.short_sha }}</a>.
+          Building on commit <a href="https://github.com/${{ env.KERNEL_REPO }}/commit/${{ steps.vars.outputs.long_sha }}">${{ steps.vars.outputs.short_sha }}</a>.
 
-          <a href="https://github.com/${{ env.REPO }}/commits">All Commits</a> | <a href="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}">Running Action</a>
+          <a href="https://github.com/${{ env.KERNEL_REPO }}/commits">All Commits</a> | <a href="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}">Running Action</a>
 
     - name: Run Script to Remove Ksu
       if: env.REMOVE_KSU == 'true'
@@ -75,9 +78,9 @@ jobs:
         arch: ${{ env.ARCH }}
         compiler: ${{ env.COMPILER }}
         defconfig: ${{ env.DEFCONFIG }}
-        image: ${{ env.IMAGE }}
-        dtbo: ${{ env.DTBO }}
-        dtb: ${{ env.DTB }}
+        image: ${{ env.IMAGE_FILE_NAME }}
+        dtbo: ${{ env.NEED_DTBO }}
+        dtb: ${{ env.NEED_DTB }}
 
     - name: Post Build to Telegram
       uses: appleboy/telegram-action@master
