--- a/config.env
+++ b/config.env
@@ -1,13 +1,13 @@
 RELEASE_NAME=
 KERNEL_REPO=
 KERNEL_BRANCH=
-KERNEL_SUBMODULES=
-ZIPPER_REPO=
+KERNEL_SUBMODULES=false
+ZIPPER_REPO=sen-tenz/AnyKernel3
 ZIPPER_BRANCH=
-ARCH=
-COMPILER=
-DEFCONFIG=
+ARCH=arm64
+COMPILER=neutron-clang/latest
+DEFCONFIG=vendor/kona-perf_defconfig
 IMAGE_FILE_NAME=
-NEED_DTBO=
-NEED_DTB=
-REMOVE_KSU=
+NEED_DTBO=true
+NEED_DTB=true
+REMOVE_KSU=false
