--- a/config.env
+++ b/config.env
@@ -1,13 +1,13 @@
-RELEASE_NAME=
-KERNEL_REPO=
-KERNEL_BRANCH=
+RELEASE_NAME=Stellaris-OOS13_UNOFFICIAL
+KERNEL_REPO=DawfukFR/kernel_oneplus_sm8250
+KERNEL_BRANCH=OOS13
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=sen-tenz/AnyKernel3
-ZIPPER_BRANCH=
+ZIPPER_BRANCH=stellaris
 ARCH=arm64
 COMPILER=neutron-clang/latest
 DEFCONFIG=vendor/kona-perf_defconfig
-IMAGE_FILE_NAME=
+IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
 REMOVE_KSU=false
