--- a/config.env
+++ b/config.env
@@ -1,13 +1,13 @@
-RELEASE_NAME=
-KERNEL_REPO=
-KERNEL_BRANCH=
+RELEASE_NAME=Meteoric-xzr_UNOFFICIAL
+KERNEL_REPO=HELLBOY017/kernel_oneplus_sm8250
+KERNEL_BRANCH=xzr
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=sen-tenz/AnyKernel3
-ZIPPER_BRANCH=
+ZIPPER_BRANCH=meteoric
 ARCH=arm64
 COMPILER=neutron-clang/latest
 DEFCONFIG=vendor/kona-perf_defconfig
-IMAGE_FILE_NAME=
+IMAGE_FILE_NAME=Image.gz
 NEED_DTBO=true
 NEED_DTB=true
 REMOVE_KSU=false
