--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 RELEASE_NAME=Meteoric-13.1_UNOFFICIAL
 KERNEL_REPO=HELLBOY017/kernel_oneplus_sm8250
 KERNEL_BRANCH=13.1
-KERNEL_SUBMODULES=true
+KERNEL_SUBMODULES=recursive
 ZIPPER_REPO=sen-tenz/AnyKernel3
 ZIPPER_BRANCH=meteoric
 ARCH=arm64
