--- a/config.env
+++ b/config.env
@@ -1,12 +1,12 @@
-RELEASE_NAME=Stellaris-OOS13_UNOFFICIAL
-KERNEL_REPO=DawfukFR/kernel_oneplus_sm8250
-KERNEL_BRANCH=OOS13
+RELEASE_NAME=Whiteshiro-KSU-by-M03L.id
+KERNEL_REPO=bianca2190/platform_kernel_xiaomi_vayu
+KERNEL_BRANCH=staging/13.0
 KERNEL_SUBMODULES=false
-ZIPPER_REPO=sen-tenz/AnyKernel3
-ZIPPER_BRANCH=stellaris
+ZIPPER_REPO=bianca2190/AnyKernel3
+ZIPPER_BRANCH=vayu
 ARCH=arm64
 COMPILER=neutron-clang/latest
-DEFCONFIG=vendor/kona-perf_defconfig
+DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
