--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
 
     - name: Run Script to Remove Ksu
       if: env.REMOVE_KSU == 'true'
-      run: python script/remove-ksu.py ${{ env.RELEASE_NAME }
+      run: python script/remove-ksu.py ${{ env.RELEASE_NAME }}
 
     - name: Android Kernel Build
       uses: sen-tenz/android-kernel-actions@neutron
