--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=clang/latest
+COMPILER=proton-clang/master
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
