--- a/config.env
+++ b/config.env
@@ -11,3 +11,7 @@ IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
 REMOVE_KSU=false
+# aosp-clang/clang-r475365b
+# neutron-clang/latest
+# proton-clang/master
+# clang/17
