--- a/config.env
+++ b/config.env
@@ -11,6 +11,7 @@ IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
 REMOVE_KSU=false
+ADD_KSU=true
 # aosp-clang/clang-r475365b
 # neutron-clang/latest
 # proton-clang/master
