--- a/config.env
+++ b/config.env
@@ -14,5 +14,6 @@ REMOVE_KSU=false
 ADD_KSU=true
 # aosp-clang/clang-r475365b
 # neutron-clang/latest
-# proton-clang/master
-# clang/17
+# proton-clang/16
+# clang/latest
+# gcc/latest
