--- a/config.env
+++ b/config.env
@@ -5,14 +5,16 @@ KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=gcc/latest
+COMPILER=zyc-clang/20230722
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
 REMOVE_KSU=false
+ADDKSU=true
+KUSER=m03l
+KHOST=cyberspace-x64
 # aosp-clang/clang-r475365b
 # neutron-clang/latest
 # proton-clang/16
-# clang/latest
-# gcc/latest
+# zyc-clang/20230722
