--- a/config.env
+++ b/config.env
@@ -11,7 +11,7 @@ IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
 REMOVE_KSU=false
-ADDKSU=true
+ADD_KSU=true
 KUSER=m03l
 KHOST=cyberspace-x64
 # aosp-clang/clang-r475365b
