--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,8 @@ jobs:
         echo "NEED_DTB=$(cat script/config.env | grep "NEED_DTB" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
         echo "REMOVE_KSU=$(cat script/config.env | grep "REMOVE_KSU" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
         echo "ADD_KSU=$(cat script/config.env | grep "ADD_KSU" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
-        echo "KUSER=$(cat script/config.env | grep "KUSER" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_E
-        echo "KHOST=$(cat script/config.env | grep "KHOST" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_E
+        echo "KUSER=$(cat script/config.env | grep "KUSER" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
+        echo "KHOST=$(cat script/config.env | grep "KHOST" | head -n 1 | cut -d "=" -f 2 | tr -d '\r')" >> $GITHUB_ENV
 
     - name: Checkout Kernel Source
       uses: actions/checkout@v3
