--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=zyc-clang/20230722
+COMPILER=zyc-clang/Clang-17.0.0-20230722
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
@@ -14,7 +14,10 @@ REMOVE_KSU=false
 ADD_KSU=true
 KUSER=m03l
 KHOST=cyberspace-x64
+
+###############Toolchain###############
+# zyc-clang/Clang-17.0.0-20230722
 # aosp-clang/clang-r475365b
 # neutron-clang/latest
 # proton-clang/16
-# zyc-clang/20230722
+#######################################
