--- a/config.env
+++ b/config.env
@@ -10,10 +10,10 @@ DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
-REMOVE_KSU=false
 ADD_KSU=true
 KUSER=m03l
 KHOST=cyberspace-x64
+KNAME=RedDragon-v1-KSU-by-M03L.id
 
 ###############Toolchain###############
 # zyc-clang/17.0.0-20230722
