--- a/config.env
+++ b/config.env
@@ -1,16 +1,17 @@
 RELEASE_NAME=RedDragon-KSU-by-M03L.id
 KERNEL_REPO=bianca2190/kernel_xiaomi_vayu
-KERNEL_BRANCH=staging
+KERNEL_BRANCH=13.0-stable
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=zyc-clang/17.0.0-20230722
+COMPILER=aosp-clang/clang-r475365b
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
 ADD_KSU=true
+VER_KSU=v0.6.2
 KUSER=m03l
 KHOST=cyberspace-x64
 KNAME=RedDragon-v1-KSU-by-M03L.id
