--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
-RELEASE_NAME=RedDragon-KSU-by-M03L.id
+RELEASE_NAME=RedDragon-v1-KSU-by-M03L.id
 KERNEL_REPO=bianca2190/kernel_xiaomi_vayu
 KERNEL_BRANCH=13.0-stable
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=aosp-clang/clang-r475365b
+COMPILER=zyc-clang/17.0.0-20230722
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
