--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 RELEASE_NAME=RedDragon-v1-KSU-by-M03L.id
-KERNEL_REPO=bianca2190/kernel_xiaomi_vayu
-KERNEL_BRANCH=13.0-stable
+KERNEL_REPO=elizabethangelalorenza/kernel_xiaomi_vayu
+KERNEL_BRANCH=staging
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
@@ -10,7 +10,7 @@ DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
-ADD_KSU=false
+ADD_KSU=true
 VER_KSU=v0.6.2
 KUSER=m03l
 KHOST=cyberspace-x64
