--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=proton-clang/16
+COMPILER=prelude-clang/master
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
@@ -19,6 +19,7 @@ KNAME=RedDragon-v1-KSU-by-M03L.id
 ###############Toolchain###############
 # zyc-clang/17.0.0-20230722
 # aosp-clang/clang-r475365b
-# neutron-clang/latest
-# proton-clang/16
+# neutron-clang/latest     // latest
+# proton-clang/16     // 17,16,15,14,13,12
+# prelude-clang/master     // master,15.0-dev,14.0
 #######################################
