--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=aosp-clang/clang-r475365b
+COMPILER=yuki-clang/main
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
@@ -22,4 +22,5 @@ KNAME=RedDragon-v1-KSU-by-M03L.id
 # neutron-clang/latest     // latest
 # proton-clang/16     // 17,16,15,14,13,12
 # prelude-clang/master     // master,15.0-dev,14.0
+# yuki-clang/main     // main,17.0.0,16.0.0
 #######################################
