--- a/config.env
+++ b/config.env
@@ -22,5 +22,5 @@ KNAME=RedDragon-v1-KSU-by-M03L.id
 # neutron-clang/latest     // latest
 # proton-clang/16     // 17,16,15,14,13,12
 # prelude-clang/master     // master,15.0-dev,14.0
-# yuki-clang/main     // main,17.0.0,16.0.0
+# yuki-clang/17.0.0     // main,17.0.0,16.0.0
 #######################################
