--- a/config.env
+++ b/config.env
@@ -5,12 +5,12 @@ KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=zyc-clang/17.0.0-20230722
+COMPILER=yuki-clang/17.0.0
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
-ADD_KSU=true
+ADD_KSU=false
 VER_KSU=v0.6.2
 KUSER=m03l
 KHOST=cyberspace-x64
