--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=zyc-clang/17.0.0-20230722
+COMPILER=prelude-clang/master
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
@@ -20,7 +20,7 @@ KNAME=RedDragon-v1-KSU-by-M03L.id
 # aosp-clang/clang-r475365b
 # zyc-clang/17.0.0-20230722
 # neutron-clang/latest     // latest
-# proton-clang/16     // 17,16,15,14,13,12
+# proton-clang/clang-16     // 17,16,15,14,13
 # prelude-clang/master     // master,15.0-dev,14.0
 # yuki-clang/17.0.0     // main,17.0.0,16.0.0
 #######################################
