--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 RELEASE_NAME=Whiteshiro-v1-KSU-by-M03L.id
-KERNEL_REPO=Avarice12/platform_kernel_xiaomi_vayu
-KERNEL_BRANCH=13.1
+KERNEL_REPO=ArrowOS-Devices/android_kernel_xiaomi_vayu
+KERNEL_BRANCH=arrow-13.0
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
