Update and rename config.env.evox to config.env

--- a/config.env
+++ b/config.env
@@ -17,8 +17,9 @@ KHOST=cyberspace-x64
 KNAME=RedDragon-v1-KSU-by-M03L.id
 
 ###############Toolchain###############
-# aosp-clang/clang-r475365b
-# zyc-clang/17.0.0-20230722
+# gcc/12     // 12,11,10,9
+# aosp-clang/clang-r475365b     //
+# zyc-clang/17.0.0-20230722     //
 # neutron-clang/latest     // latest
 # proton-clang/clang-16     // 17,16,15,14,13
 # prelude-clang/master     // master,15.0-dev,14.0
