--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
 RELEASE_NAME=RedDragon-v1-KSU-by-M03L.id
-KERNEL_REPO=elizabethangelalorenza/kernel_xiaomi_vayu
-KERNEL_BRANCH=staging
+KERNEL_REPO=bianca2190/kernel_xiaomi_vayu
+KERNEL_BRANCH=13.0
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=aosp-clang/clang-r475365b
+COMPILER=yuki-clang/17.0.0
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
@@ -18,6 +18,7 @@ KNAME=RedDragon-v1-KSU-by-M03L.id
 
 ###############Toolchain###############
 # gcc/12     // 12,11,10,9
+# clang/15     // 15,14,13,12,11
 # aosp-clang/clang-r475365b     //
 # zyc-clang/17.0.0-20230722     //
 # neutron-clang/latest     // latest
