--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
-RELEASE_NAME=RedDragon-v1-KSU-by-M03L.id
+RELEASE_NAME=RedDragon-v1
 KERNEL_REPO=bianca2190/kernel_xiaomi_vayu
 KERNEL_BRANCH=13.0
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=zyc-clang/17.0.0-20230722
+COMPILER=aosp-clang/clang-r475365b
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
@@ -19,8 +19,8 @@ KNAME=RedDragon-v1-KSU-by-M03L.id
 ###############Toolchain###############
 # gcc/12     // 12,11,10,9
 # clang/15     // 15,14,13,12,11
-# aosp-clang/clang-r475365b     //
-# zyc-clang/17.0.0-20230722     //
+# aosp-clang/clang-r475365b     // clang-r498229,clang-r475365b
+# zyc-clang/17.0.0-20230722     // date now
 # neutron-clang/latest     // latest
 # proton-clang/clang-16     // 17,16,15,14,13
 # prelude-clang/master     // master,15.0-dev,14.0
