--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
 RELEASE_NAME=RedDragon-v1
 KERNEL_REPO=bianca2190/kernel_xiaomi_vayu
-KERNEL_BRANCH=13.0-ksu
+KERNEL_BRANCH=13.0
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=neutron-clang/latest
+COMPILER=aosp-clang/clang-r498229
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
