--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 RELEASE_NAME=DarkShadow-v1
 KERNEL_REPO=bianca2190/android_kernel_xiaomi_sm8150
-KERNEL_BRANCH=13.0-test
+KERNEL_BRANCH=13.0
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
