--- a/config.env
+++ b/config.env
@@ -10,7 +10,7 @@ DEFCONFIG=vayu_user_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
-ADD_KSU=true
+ADD_KSU=false
 VER_KSU=v0.6.2
 KUSER=m03l
 KHOST=cyberspace-x64
