--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
 RELEASE_NAME=DarkShadow-v1
 KERNEL_REPO=bianca2190/android_kernel_xiaomi_sm8150
-KERNEL_BRANCH=13.0
+KERNEL_BRANCH=13.0-test
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=proton-clang/clang-16
+COMPILER=neutron-clang/latest
 DEFCONFIG=vayu_user_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
