Update and rename config.env.evox to config.env

--- a/config.env
+++ b/config.env
@@ -11,7 +11,7 @@ IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
 ADD_KSU=true
-VER_KSU=v0.6.2
+VER_KSU=main
 KUSER=m03l
 KHOST=cyberspace-x64
 KNAME=RedDragon-v1-KSU-by-M03L.id
