Update and rename config.env.crdroid to config.env

--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 RELEASE_NAME=DarkShadow-v1
-KERNEL_REPO=bianca2190/android_kernel_xiaomi_sm8150
-KERNEL_BRANCH=13.0-test
+KERNEL_REPO=crdroidandroid/android_kernel_xiaomi_sm8150
+KERNEL_BRANCH=13.0
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
@@ -10,8 +10,8 @@ DEFCONFIG=vayu_user_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
-ADD_KSU=false
-VER_KSU=v0.6.2
+ADD_KSU=true
+VER_KSU=main
 KUSER=m03l
 KHOST=cyberspace-x64
 KNAME=DarkShadow-v1-KSU-by-M03L.id
