--- a/config.env
+++ b/config.env
@@ -5,13 +5,13 @@ KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
 ARCH=arm64
-COMPILER=neutron-clang/latest
+COMPILER=aosp-clang/clang-r498229
 DEFCONFIG=vayu_defconfig
 IMAGE_FILE_NAME=Image
 NEED_DTBO=true
 NEED_DTB=true
 ADD_KSU=true
-VER_KSU=main
+VER_KSU=v0.6.7
 KUSER=m03l
 KHOST=cyberspace-x64
 KNAME=RedDragon-v1-KSU-by-M03L.id
