--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-RELEASE_NAME=RedDragon-v1
-KERNEL_REPO=bianca2190/kernel_xiaomi_vayu
-KERNEL_BRANCH=13.0-ksu
+RELEASE_NAME=RedDragon-v2
+KERNEL_REPO=elizabethangelalorenza/kernel_xiaomi_vayu
+KERNEL_BRANCH=tiramisu
 KERNEL_SUBMODULES=false
 ZIPPER_REPO=bianca2190/AnyKernel3
 ZIPPER_BRANCH=vayu
